# chuck-norris-facts

./: pyproject.toml
chuck_norris_facts/: app.py  controller.py
