[tool.poetry]
name = "chuck-norris-facts"
version = "0.1.0"
description = ""
authors = ["BoxxRoss <burnw961@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "chuck_norris_facts"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
